# tilebox

./: .clang-tidy  .editorconfig  .env.example  .gitignore  .nvim-dap.lua  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  Makefile  ProjectOptions.cmake  README.md
cmake/: Cache.cmake  ClangFormat.cmake  ClangTidy.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake
docs/: dependencies.md  make_it_your_own.md  tilebox-core.md  window-manager.md
install-files/: tilebox.desktop
install-files/picom/: picom.conf
make/: canned_recipes.mk
scripts/: embed.sh
tbwm/: CMakeLists.txt
tbwm/src/: atom_manager.cpp  atom_manager.hpp  log.cpp  log.hpp  main.cpp  wm.cpp  wm.hpp  xerror_handler.cpp  xerror_handler.hpp
tilebox/: CMakeLists.txt
tilebox-core/: CMakeLists.txt
tilebox-core/examples/: CMakeLists.txt  peripheral_logger.cpp  peripheral_logger.hpp  scratch.cpp
tilebox-core/include/tilebox-core/: error.hpp  geometry.hpp  version.hpp
tilebox-core/include/tilebox-core/draw/: color.hpp  colorscheme.hpp  colorscheme_config.hpp  cursor.hpp  draw.hpp  font.hpp  utf8_codec.hpp
tilebox-core/include/tilebox-core/utils/: attributes.hpp  debug.hpp  tagged_fundamental.hpp
tilebox-core/include/tilebox-core/x11/: display.hpp  even_dispatcher.hpp  event_loop.hpp  events.hpp  window.hpp
tilebox-core/src/: geometry.cpp  version.cpp
tilebox-core/src/draw/: color.cpp  colorscheme.cpp  colorscheme_config.cpp  cursor.cpp  draw.cpp  font.cpp  utf8_codec.cpp
tilebox-core/src/x11/: display.cpp  event_dispatcher.cpp  event_loop.cpp  events.cpp  window.cpp
tilebox-core/tests/: CMakeLists.txt  colorscheme_tests.cpp  cursor_tests.cpp  draw_tests.cpp  font_tests.cpp  geometry_tests.cpp  utf8_codec_tests.cpp  utils_tests.cpp  version_test.cpp  version_tests.cpp  x11_display_tests.cpp  x11_tests.cpp
tilebox/configure_files/: config.hpp.in
tilebox/examples/: CMakeLists.txt  peripheral_logger.cpp  peripheral_logger.hpp
tilebox/include/tilebox/: config.hpp  core.hpp  error.hpp  geometry.hpp
tilebox/include/tilebox/draw/: color.hpp  colorscheme.hpp  colorscheme_config.hpp  cursor.hpp  draw.hpp  font.hpp  utf8_codec.hpp
tilebox/include/tilebox/utils/: debug.hpp
tilebox/include/tilebox/x11/: display.hpp  event_loop.hpp  events.hpp  window.hpp
tilebox/src/: core.cpp  geometry.cpp
tilebox/src/draw/: color.cpp  colorscheme.cpp  colorscheme_config.cpp  cursor.cpp  draw.cpp  font.cpp  utf8_codec.cpp
tilebox/src/x11/: display.cpp  event_loop.cpp  events.cpp  window.cpp
tilebox/tests/: CMakeLists.txt  colorscheme_tests.cpp  cursor_tests.cpp  font_tests.cpp  geometry_tests.cpp  tests.cpp  x11_display_tests.cpp
twm/: CMakeLists.txt
twm/src/: atom_manager.cpp  log.hpp  main.cpp  wm.cpp  wm.hpp  xerror_handler.cpp  xerror_handler.hpp
twm/tests/: CMakeLists.txt
window-manager/: CMakeLists.txt
window-manager/examples/: CMakeLists.txt  scratch.cpp
window-manager/src/: main.cpp  version.cpp  version.hpp  window_manager.cpp  window_manager.hpp
window-manager/tests/: CMakeLists.txt  version_test.cpp
